# DMA-RingBuffer-FreeRTOS-UART

./: .gitignore  CMakeLists.txt  LICENSE  Project.uvoptx  Project.uvprojx  README.md  STM32F103ZE.sct  Transmit.txt
Core/: startup_stm32f103xe.s
Framework/: ringbuffer.c  ringbuffer.h  uart_api.c  uart_api.h  uart_dma.c  uart_dma.h  uart_port.c  uart_port.h
FreeRTOS/include/: FreeRTOSConfig.h
HAL/inc/: stm32f1xx_hal.h
HAL/src/: stm32f1xx_hal_flash.c
RTE/_STM32F103ZE/: RTE_Components.h
User/: main.c  stm32f1xx_hal_conf.h  stm32f1xx_it.c  stm32f1xx_it.h  stubs.c
api/: uart_api.c  uart_api.h
config/: uart_config.h
doc/: debug-journal.md  error.txt  代码实现详解.md  开发错误与解决方案.md  框架原理.md  项目说明.md
driver/: uart_dma.c  uart_dma.h
example/: echo_demo.c  protocol_demo.c
platform/stm32f103zet6/: DMAFreeRTOS.uvoptx  DMAFreeRTOS.uvprojx  FreeRTOSConfig.h  Makefile  README.md  STM32F103XE_FLASH.ld  STM32F103XE_FLASH.sct  configure_paths.ps1  main.c  startup_stm32f103xe.s  stm32f1xx_hal_conf.h  stm32f1xx_it.c
port/: uart_port.h
port/stm32f1xx/: uart_port.c
ringbuffer/: ringbuffer.c  ringbuffer.h
test/: test_ringbuffer.c  test_uart_loopback.c
